--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,26 @@
 @import "tailwindcss";
+@import 'leaflet/dist/leaflet.css';
+
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+    --primary: #3B82F6;
+    --text-second: #334155;
+    --footer-color: #334155;
+    --border-color: #F1F5F9;
+    --primary-gray: #64748B;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-inter: var(--font-inter);
+    --color-primary-color: var(--primary);
+    --color-primary-text: var(--text-second);
+    --color-footer-bg: var(--footer-color);
+    --color-light-border: var(--border-color);
+    --color-gray-text: var(--primary-gray);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +31,5 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-inter), Helvetica, sans-serif;
 }
