--- a/app/globals.css
+++ b/app/globals.css
@@ -33,3 +33,8 @@
 body {
   font-family: var(--font-inter), Helvetica, sans-serif;
 }
+
+
+.host-hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.5) 100%), url("/images/host-sec-image.png");
+}
